# Focus_Lamp

./: Focus_Lamp_Architecture_Guide.md  Focus_Lamp_Main_Architecture_Guide.md  pyproject.toml  test.py
lelamp/: record.py  replay.py  setup_motors.py  teacher.py  ttt.py
lelamp/app/voice/: agent.py
lelamp/focus/: HOME_SETUP_README.md  focus_config.json  focus_service.py  go_to_home_position.py  main.py  quick_set_home.py  set_home_position.py  simple_rgb_test.py
lelamp/follower/: __init__.py  config_lelamp_follower.py  home.json  lelamp_follower.py
lelamp/leader/: __init__.py  config_lelamp_leader.py  lelamp_leader.py
lelamp/recordings/: 0_beginning_lelamp.csv  0_ending_lelamp.csv  10_shake_lelamp.csv  11_angry_lelamp.csv  21_standup_lelamp.csv  30_nod1_lelamp.csv  30_nord_lelamp.csv  31_wiggle_lelamp.csv  41_courage_lelamp.csv  51_scanning_lelamp.csv  teachers_day_lelamp.csv
lelamp/service/: __init__.py  base.py
lelamp/service/motors/: __init__.py  motors_service.py
lelamp/service/rgb/: __init__.py  rgb_service.py
lelamp/test/: focus_config.json  main.py  test_audio.py  test_motors.py  test_rgb.py
notes/: RGB灯光控制原理详解.md  算法逻辑.md  色温与亮度控制.md
